# recursive-variant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/rva/: variant.hpp
test/: test_replace.cpp  test_rva.cpp  test_variant.cpp
